--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 
         <div class="max-w-[1180px] h-[530px] m-auto relative z-[-10]">
             <div class="flex m-auto justify-between">
-                <img src="/images/Image 1.png" alt="" class="absolute top-[-70px]">
-                <img src="/images/Image 2.png" alt="" class="absolute top-[-70px] left-[300px]">
-                <img src="/images/Image 3.png" alt=""class="absolute top-[-70px] right-[300px]">
-                <img src="/images/Image 4.png" alt=""class="absolute top-[-70px] right-0 ">
+                <img src="./images/Image 1.png" alt="" class="absolute top-[-70px]">
+                <img src="./images/Image 2.png" alt="" class="absolute top-[-70px] left-[300px]">
+                <img src="./images/Image 3.png" alt=""class="absolute top-[-70px] right-[300px]">
+                <img src="./images/Image 4.png" alt=""class="absolute top-[-70px] right-0 ">
             </div>
         </div>
 
