--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
          
 
             <div class="absolute top-[-70px] left-[50%] translate-x-[-50%] text-center">
-                <img class="rounded-full" src="/images/12861 (image).png" alt="">
+                <img class="rounded-full" src="./images/12861 (image).png" alt="">
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
