--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@
                      <!-- image position part start -->
                      <div class="w-[50%] relative z-[-1]">
                       <div class="">
-                          <img src="/images/Image.png" alt="" class="absolute top-4 right-5 z-[-1]">
-                          <img src="/images/Image (1).png" alt="">
-                          <img src="/images/Image (2).png" alt="" class="absolute top-[200px] right-0">
+                          <img src="./images/Image.png" alt="" class="absolute top-4 right-5 z-[-1]">
+                          <img src="./images/Image (1).png" alt="">
+                          <img src="./images/Image (2).png" alt="" class="absolute top-[200px] right-0">
                       </div>
                   </div>
                   <!-- image position part end -->
